# edge_ai_sdk

./: .gitignore  BUILD.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  EXPORT_LIBRARY_PATH.md  GSTREAMER_WARNINGS.md  INSTALL_SDK.md  README.md  README_SDK.md  RUN_SAMPLES.md  run_app.sh  run_samples.sh  setup_third_party.sh
include/: config.h
samples/: 1-1-1_sample.cpp  1-1-N_sample.cpp  1-N-1_sample.cpp  1-N-1_sample2.cpp  1-N-1_sample3.cpp  1-N-N_sample.cpp  CMakeLists.txt  N-1-N_sample.cpp  N-N_sample.cpp  README.md  README_MQTT_JSON_TRANSFORMER.md  SELECTED_SAMPLES_RTMP_MQTT.md  Untitled  app_des_sample.cpp  app_src_des_sample.cpp  app_src_sample.cpp  ba_crossline_sample.cpp  ba_jam_sample.cpp  ba_stop_sample.cpp  body_scan_and_plate_detect_sample.cpp  cvedix_logger_sample.cpp  cvedix_test.cpp  dynamic_pipeline_sample.cpp  dynamic_pipeline_sample2.cpp  enet_seg_sample.cpp  face_swap_sample.cpp  face_tracking_rtsp_sample.cpp  face_tracking_sample.cpp  face_yunet_int8_sample.cpp  ffmpeg_src_des_sample.cpp  ffmpeg_transcode_sample.cpp  firesmoke_detect_sample.cpp  frame_fusion_sample.cpp  image_des_sample.cpp  image_src_sample.cpp  interaction_with_pipe_sample.cpp  lane_detect_sample.cpp  mask_rcnn_sample.cpp  message_broker_kafka_sample.cpp  message_broker_sample.cpp  (+35 more)
src/: main.cpp  main_with_config.cpp
