# CMakeLists.txt for CVEDIX SDK Samples
# This file can ONLY be called by parent CMakeLists.txt
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    message(FATAL_ERROR "This CMakeLists.txt can ONLY be called by parent CMakeLists.txt.")
endif()

message(STATUS "Building CVEDIX SDK samples...")

# Set output directory for all executables
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# ============================================================================
# Basic Samples - No special dependencies required
# ============================================================================
message(STATUS "Building basic samples...")

# Pipeline structure samples
add_executable(1-1-1_sample "1-1-1_sample.cpp")
target_link_libraries(1-1-1_sample ${PROJECT_NAME})

add_executable(1-1-N_sample "1-1-N_sample.cpp")
target_link_libraries(1-1-N_sample ${PROJECT_NAME})

add_executable(1-N-N_sample "1-N-N_sample.cpp")
target_link_libraries(1-N-N_sample ${PROJECT_NAME})

add_executable(N-1-N_sample "N-1-N_sample.cpp")
target_link_libraries(N-1-N_sample ${PROJECT_NAME})

add_executable(N-N_sample "N-N_sample.cpp")
target_link_libraries(N-N_sample ${PROJECT_NAME})

# Image processing samples
add_executable(image_src_sample "image_src_sample.cpp")
target_link_libraries(image_src_sample ${PROJECT_NAME})

add_executable(image_des_sample "image_des_sample.cpp")
target_link_libraries(image_des_sample ${PROJECT_NAME})

# Detection and tracking samples
add_executable(face_tracking_sample "face_tracking_sample.cpp")
target_link_libraries(face_tracking_sample ${PROJECT_NAME})

add_executable(multi_detectors_sample "multi_detectors_sample.cpp")
target_link_libraries(multi_detectors_sample ${PROJECT_NAME})

add_executable(multi_detectors_and_classifiers_sample "multi_detectors_and_classifiers_sample.cpp")
target_link_libraries(multi_detectors_and_classifiers_sample ${PROJECT_NAME})

# Segmentation samples
add_executable(mask_rcnn_sample "mask_rcnn_sample.cpp")
target_link_libraries(mask_rcnn_sample ${PROJECT_NAME})

add_executable(enet_seg_sample "enet_seg_sample.cpp")
target_link_libraries(enet_seg_sample ${PROJECT_NAME})

add_executable(openpose_sample "openpose_sample.cpp")
target_link_libraries(openpose_sample ${PROJECT_NAME})

# Behavior analysis samples
add_executable(ba_crossline_sample "ba_crossline_sample.cpp")
target_link_libraries(ba_crossline_sample ${PROJECT_NAME})

# Face processing samples
add_executable(face_swap_sample "face_swap_sample.cpp")
target_link_libraries(face_swap_sample ${PROJECT_NAME})

add_executable(face_yunet_int8_sample "face_yunet_int8_sample.cpp")
target_link_libraries(face_yunet_int8_sample ${PROJECT_NAME})

# Utility samples
add_executable(cvedix_logger_sample "cvedix_logger_sample.cpp")
target_link_libraries(cvedix_logger_sample ${PROJECT_NAME})

add_executable(record_sample "record_sample.cpp")
target_link_libraries(record_sample ${PROJECT_NAME})

add_executable(skip_sample "skip_sample.cpp")
target_link_libraries(skip_sample ${PROJECT_NAME})

add_executable(interaction_with_pipe_sample "interaction_with_pipe_sample.cpp")
target_link_libraries(interaction_with_pipe_sample ${PROJECT_NAME})

add_executable(message_broker_sample "message_broker_sample.cpp")
target_link_libraries(message_broker_sample ${PROJECT_NAME})

# Detection samples
add_executable(obstacle_detect_sample "obstacle_detect_sample.cpp")
target_link_libraries(obstacle_detect_sample ${PROJECT_NAME})

add_executable(firesmoke_detect_sample "firesmoke_detect_sample.cpp")
target_link_libraries(firesmoke_detect_sample ${PROJECT_NAME})

add_executable(lane_detect_sample "lane_detect_sample.cpp")
target_link_libraries(lane_detect_sample ${PROJECT_NAME})

# Video processing samples
add_executable(video_restoration_sample "video_restoration_sample.cpp")
target_link_libraries(video_restoration_sample ${PROJECT_NAME})

add_executable(frame_fusion_sample "frame_fusion_sample.cpp")
target_link_libraries(frame_fusion_sample ${PROJECT_NAME})

# Application source/des samples
add_executable(app_des_sample "app_des_sample.cpp")
target_link_libraries(app_des_sample ${PROJECT_NAME})

add_executable(app_src_des_sample "app_src_des_sample.cpp")
target_link_libraries(app_src_des_sample ${PROJECT_NAME})

# Test sample
add_executable(cvedix_test "cvedix_test.cpp")
target_link_libraries(cvedix_test ${PROJECT_NAME})

# ============================================================================
# RTSP Samples - Require RTSP server support
# ============================================================================
if(CVEDIX_WITH_RTSP_SERVER)
    message(STATUS "Building RTSP samples...")
    
    add_executable(rtsp_src_sample "rtsp_src_sample.cpp")
    target_link_libraries(rtsp_src_sample ${PROJECT_NAME})
    
    add_executable(rtsp_des_sample "rtsp_des_sample.cpp")
    target_link_libraries(rtsp_des_sample ${PROJECT_NAME})
    
    add_executable(rtsp_ba_crossline_sample "rtsp_ba_crossline_sample.cpp")
    target_link_libraries(rtsp_ba_crossline_sample ${PROJECT_NAME})
    
    # Face tracking RTSP sample - requires RTSP and optionally MQTT
    add_executable(face_tracking_rtsp_sample "face_tracking_rtsp_sample.cpp")
    target_include_directories(face_tracking_rtsp_sample PRIVATE ${CMAKE_SOURCE_DIR}/third_party)
    target_link_libraries(face_tracking_rtsp_sample ${PROJECT_NAME})
    
    # Link with mosquitto if MQTT is enabled
    if(CVEDIX_WITH_MQTT)
        if(MOSQUITTO_FOUND)
            target_link_libraries(face_tracking_rtsp_sample ${MOSQUITTO_LIBRARIES})
        else()
            find_library(MOSQUITTO_LIB NAMES mosquitto)
            if(MOSQUITTO_LIB)
                target_link_libraries(face_tracking_rtsp_sample ${MOSQUITTO_LIB})
            endif()
        endif()
    endif()
else()
    message(STATUS "Skipping RTSP samples - RTSP server not available")
endif()

# ============================================================================
# Kafka Samples - Require Kafka support
# ============================================================================
if(CVEDIX_WITH_KAFKA)
    message(STATUS "Building Kafka samples...")
    
    add_executable(message_broker_kafka_sample "message_broker_kafka_sample.cpp")
    target_link_libraries(message_broker_kafka_sample ${PROJECT_NAME})
else()
    message(STATUS "Skipping Kafka samples - Kafka not available")
endif()

# ============================================================================
# MQTT Samples - Require MQTT support
# ============================================================================
if(CVEDIX_WITH_MQTT)
    message(STATUS "Building MQTT samples...")
    
    add_executable(mqtt_json_receiver_sample "mqtt_json_receiver_sample.cpp")
    target_include_directories(mqtt_json_receiver_sample PRIVATE ${CMAKE_SOURCE_DIR}/third_party)
    target_link_libraries(mqtt_json_receiver_sample ${PROJECT_NAME})
    
    # Simple RTMP + MQTT sample - Basic sample combining RTMP and MQTT
    add_executable(simple_rtmp_mqtt_sample "simple_rtmp_mqtt_sample.cpp")
    target_include_directories(simple_rtmp_mqtt_sample PRIVATE ${CMAKE_SOURCE_DIR}/third_party)
    target_link_libraries(simple_rtmp_mqtt_sample ${PROJECT_NAME})
    
    # Link with mosquitto library
    if(MOSQUITTO_FOUND)
        target_link_libraries(mqtt_json_receiver_sample ${MOSQUITTO_LIBRARIES})
        target_link_libraries(simple_rtmp_mqtt_sample ${MOSQUITTO_LIBRARIES})
    else()
        find_library(MOSQUITTO_LIB NAMES mosquitto)
        if(MOSQUITTO_LIB)
            target_link_libraries(mqtt_json_receiver_sample ${MOSQUITTO_LIB})
            target_link_libraries(simple_rtmp_mqtt_sample ${MOSQUITTO_LIB})
        endif()
    endif()
else()
    message(STATUS "Skipping MQTT samples - MQTT not available")
endif()

# ============================================================================
# LLM Samples - Require LLM support
# ============================================================================
if(CVEDIX_WITH_LLM)
    message(STATUS "Building LLM samples...")
    
    add_executable(mllm_analyse_sample "mllm_analyse_sample.cpp")
    target_link_libraries(mllm_analyse_sample ${PROJECT_NAME})
    
    add_executable(mllm_analyse_sample_openai "mllm_analyse_sample_openai.cpp")
    target_link_libraries(mllm_analyse_sample_openai ${PROJECT_NAME})
else()
    message(STATUS "Skipping LLM samples - LLM not available")
endif()

# ============================================================================
# FFmpeg Samples - Require FFmpeg support
# ============================================================================
if(CVEDIX_WITH_FFMPEG)
    message(STATUS "Building FFmpeg samples...")
    
    add_executable(ffmpeg_src_des_sample "ffmpeg_src_des_sample.cpp")
    target_link_libraries(ffmpeg_src_des_sample ${PROJECT_NAME})
    
    add_executable(ffmpeg_transcode_sample "ffmpeg_transcode_sample.cpp")
    target_link_libraries(ffmpeg_transcode_sample ${PROJECT_NAME})
else()
    message(STATUS "Skipping FFmpeg samples - FFmpeg not available")
endif()

# ============================================================================
# RKNN Samples - Require RKNN support
# ============================================================================
if(CVEDIX_WITH_RKNN)
    message(STATUS "Building RKNN samples...")
    
    add_executable(rknn_yolov11_detector_sample "rknn_yolov11_detector_sample.cpp")
    target_link_libraries(rknn_yolov11_detector_sample ${PROJECT_NAME})
    
    add_executable(rknn_face_detector_sample "rknn_face_detector_sample.cpp")
    target_link_libraries(rknn_face_detector_sample ${PROJECT_NAME})
    
    add_executable(rknn_face_detection_sample "rknn_face_detection_sample.cpp")
    target_link_libraries(rknn_face_detection_sample ${PROJECT_NAME})
    
    add_executable(rknn_face_detection_file_sample "rknn_face_detection_file_sample.cpp")
    target_link_libraries(rknn_face_detection_file_sample ${PROJECT_NAME})
    
    add_executable(rknn_rtsp_tracking_sample "rknn_rtsp_tracking_sample.cpp")
    target_link_libraries(rknn_rtsp_tracking_sample ${PROJECT_NAME})
    
    # RKNN RTSP tracking with MQTT - requires RKNN, RTSP, and MQTT
    if(CVEDIX_WITH_RTSP_SERVER AND CVEDIX_WITH_MQTT)
        add_executable(rknn_rtsp_tracking_mqtt_sample "rknn_rtsp_tracking_mqtt_sample.cpp")
        target_include_directories(rknn_rtsp_tracking_mqtt_sample PRIVATE ${CMAKE_SOURCE_DIR}/third_party)
        target_link_libraries(rknn_rtsp_tracking_mqtt_sample ${PROJECT_NAME})
        
        # Link with mosquitto
        if(MOSQUITTO_FOUND)
            target_link_libraries(rknn_rtsp_tracking_mqtt_sample ${MOSQUITTO_LIBRARIES})
        else()
            find_library(MOSQUITTO_LIB NAMES mosquitto)
            if(MOSQUITTO_LIB)
                target_link_libraries(rknn_rtsp_tracking_mqtt_sample ${MOSQUITTO_LIB})
            endif()
        endif()
    endif()
    
    # RKNN face tracking sample - requires RKNN and MQTT
    if(CVEDIX_WITH_MQTT)
        add_executable(rknn_face_tracking_sample "rknn_face_tracking_sample.cpp")
        target_include_directories(rknn_face_tracking_sample PRIVATE ${CMAKE_SOURCE_DIR}/third_party)
        target_link_libraries(rknn_face_tracking_sample ${PROJECT_NAME})
        
        # Link with mosquitto
        if(MOSQUITTO_FOUND)
            target_link_libraries(rknn_face_tracking_sample ${MOSQUITTO_LIBRARIES})
        else()
            find_library(MOSQUITTO_LIB NAMES mosquitto)
            if(MOSQUITTO_LIB)
                target_link_libraries(rknn_face_tracking_sample ${MOSQUITTO_LIB})
            endif()
        endif()
    endif()
else()
    message(STATUS "Skipping RKNN samples - RKNN not available")
endif()

# ============================================================================
# PaddlePaddle Samples - Require PaddlePaddle support
# ============================================================================
if(CVEDIX_WITH_PADDLE)
    message(STATUS "Building PaddlePaddle samples...")
    
    add_executable(app_src_sample "app_src_sample.cpp")
    target_link_libraries(app_src_sample ${PROJECT_NAME})
    
    add_executable(paddle_infer_sample "paddle_infer_sample.cpp")
    target_link_libraries(paddle_infer_sample ${PROJECT_NAME})
else()
    message(STATUS "Skipping PaddlePaddle samples - PaddlePaddle not available")
endif()

# ============================================================================
# CUDA Samples - Require CUDA support
# ============================================================================
if(CVEDIX_WITH_CUDA)
    message(STATUS "Building CUDA samples...")
    
    # nvdec & nvenc plugins required from DeepStream
    add_executable(nv_hard_codec_sample "nv_hard_codec_sample.cpp")
    target_link_libraries(nv_hard_codec_sample ${PROJECT_NAME})
else()
    message(STATUS "Skipping CUDA samples - CUDA not available")
endif()

# ============================================================================
# TensorRT Samples - Require TensorRT support
# ============================================================================
if(CVEDIX_WITH_TRT)
    message(STATUS "Building TensorRT samples...")
    
    # Behavior analysis samples
    add_executable(ba_jam_sample "ba_jam_sample.cpp")
    target_link_libraries(ba_jam_sample ${PROJECT_NAME})
    
    add_executable(ba_stop_sample "ba_stop_sample.cpp")
    target_link_libraries(ba_stop_sample ${PROJECT_NAME})
    
    # Detection and recognition samples
    add_executable(body_scan_and_plate_detect_sample "body_scan_and_plate_detect_sample.cpp")
    target_link_libraries(body_scan_and_plate_detect_sample ${PROJECT_NAME})
    
    add_executable(plate_recognize_sample "plate_recognize_sample.cpp")
    target_link_libraries(plate_recognize_sample ${PROJECT_NAME})
    
    add_executable(vehicle_body_scan_sample "vehicle_body_scan_sample.cpp")
    target_link_libraries(vehicle_body_scan_sample ${PROJECT_NAME})
    
    add_executable(vehicle_tracking_sample "vehicle_tracking_sample.cpp")
    target_link_libraries(vehicle_tracking_sample ${PROJECT_NAME})
    
    add_executable(vehicle_cluster_based_on_classify_encoding_sample "vehicle_cluster_based_on_classify_encoding_sample.cpp")
    target_link_libraries(vehicle_cluster_based_on_classify_encoding_sample ${PROJECT_NAME})
    
    # Pipeline samples
    add_executable(dynamic_pipeline_sample "dynamic_pipeline_sample.cpp")
    target_link_libraries(dynamic_pipeline_sample ${PROJECT_NAME})
    
    add_executable(dynamic_pipeline_sample2 "dynamic_pipeline_sample2.cpp")
    target_link_libraries(dynamic_pipeline_sample2 ${PROJECT_NAME})
    
    add_executable(src_des_sample "src_des_sample.cpp")
    target_link_libraries(src_des_sample ${PROJECT_NAME})
    
    # Inference samples
    add_executable(trt_infer_sample "trt_infer_sample.cpp")
    target_link_libraries(trt_infer_sample ${PROJECT_NAME})
    
    add_executable(trt_yolov8_sample "trt_yolov8_sample.cpp")
    target_link_libraries(trt_yolov8_sample ${PROJECT_NAME})
    
    add_executable(trt_yolov8_sample2 "trt_yolov8_sample2.cpp")
    target_link_libraries(trt_yolov8_sample2 ${PROJECT_NAME})
    
    add_executable(multi_trt_infer_nodes_sample "multi_trt_infer_nodes_sample.cpp")
    target_link_libraries(multi_trt_infer_nodes_sample ${PROJECT_NAME})
    
    # Pipeline structure samples
    add_executable(1-N-1_sample "1-N-1_sample.cpp")
    target_link_libraries(1-N-1_sample ${PROJECT_NAME})
    
    add_executable(1-N-1_sample2 "1-N-1_sample2.cpp")
    target_link_libraries(1-N-1_sample2 ${PROJECT_NAME})
    
    add_executable(1-N-1_sample3 "1-N-1_sample3.cpp")
    target_link_libraries(1-N-1_sample3 ${PROJECT_NAME})
    
    # Message broker sample
    add_executable(message_broker_sample2 "message_broker_sample2.cpp")
    target_link_libraries(message_broker_sample2 ${PROJECT_NAME})
    
    # RTMP source sample
    add_executable(rtmp_src_sample "rtmp_src_sample.cpp")
    target_link_libraries(rtmp_src_sample ${PROJECT_NAME})
else()
    message(STATUS "Skipping TensorRT samples - TensorRT not available")
endif()

# ============================================================================
# Complex Samples - Require CVEDIX_BUILD_COMPLEX_SAMPLES flag
# ============================================================================
if(CVEDIX_BUILD_COMPLEX_SAMPLES)
    message(STATUS "Building complex samples...")
    
    # Face recognition pipeline
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/face_recognize)
    add_executable(face_recognize_pipeline "face_recognize/face_recognize_pipeline.cpp")
    target_link_libraries(face_recognize_pipeline ${PROJECT_NAME})
    
    if(CVEDIX_WITH_TRT)
        # Similarity search pipelines
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/similiarity_search)
        add_executable(face_encoding_pipeline "similiarity_search/face_encoding_pipeline.cpp")
        target_link_libraries(face_encoding_pipeline ${PROJECT_NAME})
        
        add_executable(vehicle_encoding_pipeline "similiarity_search/vehicle_encoding_pipeline.cpp")
        target_link_libraries(vehicle_encoding_pipeline ${PROJECT_NAME})
        
        # Vehicle behaviour analysis pipeline
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/vehicle_behaviour_analysis)
        add_executable(vehicle_ba_pipeline "vehicle_behaviour_analysis/vehicle_ba_pipeline.cpp")
        target_link_libraries(vehicle_ba_pipeline ${PROJECT_NAME})
        
        # Vehicle property and similarity search pipeline
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/vehicle_property_and_similiarity_search)
        add_executable(vehicle_encoding_classify_pipeline "vehicle_property_and_similiarity_search/vehicle_encoding_classify_pipeline.cpp")
        target_link_libraries(vehicle_encoding_classify_pipeline ${PROJECT_NAME})
        
        # License plate recognition pipeline
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lpr_camera)
        add_executable(plate_recognize_pipeline "lpr_camera/plate_recognize_pipeline.cpp")
        target_link_libraries(plate_recognize_pipeline ${PROJECT_NAME})
    endif()
    
    if(CVEDIX_WITH_PADDLE)
        # Math review pipeline
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/math_review)
        add_executable(math_expression_check_pipeline "math_review/math_expression_check_pipeline.cpp")
        target_link_libraries(math_expression_check_pipeline ${PROJECT_NAME})
    endif()
    
    # Reset output directory
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
else()
    message(STATUS "Skipping complex samples - CVEDIX_BUILD_COMPLEX_SAMPLES not enabled")
endif()

# ============================================================================
# Installation Rules
# ============================================================================
message(STATUS "Configuring installation rules...")

# Install basic samples
install(TARGETS 
    1-1-1_sample 1-1-N_sample 1-N-N_sample N-1-N_sample N-N_sample
    ba_crossline_sample enet_seg_sample face_tracking_sample
    image_des_sample image_src_sample interaction_with_pipe_sample
    mask_rcnn_sample message_broker_sample multi_detectors_and_classifiers_sample
    openpose_sample record_sample
    cvedix_logger_sample skip_sample obstacle_detect_sample
    multi_detectors_sample firesmoke_detect_sample face_swap_sample
    face_yunet_int8_sample video_restoration_sample app_des_sample
    app_src_des_sample lane_detect_sample frame_fusion_sample cvedix_test
    DESTINATION bin
    OPTIONAL
)

# Install RTSP samples if available
if(CVEDIX_WITH_RTSP_SERVER)
    install(TARGETS 
        rtsp_des_sample rtsp_src_sample rtsp_ba_crossline_sample
        face_tracking_rtsp_sample
        DESTINATION bin
        OPTIONAL
    )
endif()

# Install Kafka samples if available
if(CVEDIX_WITH_KAFKA)
    install(TARGETS 
        message_broker_kafka_sample
        DESTINATION bin
        OPTIONAL
    )
endif()

# Install MQTT samples if available
if(CVEDIX_WITH_MQTT)
    install(TARGETS 
        mqtt_json_receiver_sample
        simple_rtmp_mqtt_sample
        DESTINATION bin
        OPTIONAL
    )
endif()

# Install LLM samples if available
if(CVEDIX_WITH_LLM)
    install(TARGETS 
        mllm_analyse_sample mllm_analyse_sample_openai
        DESTINATION bin
        OPTIONAL
    )
endif()

# Install FFmpeg samples if available
if(CVEDIX_WITH_FFMPEG)
    install(TARGETS 
        ffmpeg_src_des_sample ffmpeg_transcode_sample
        DESTINATION bin
        OPTIONAL
    )
endif()

# Install RKNN samples if available
if(CVEDIX_WITH_RKNN)
    install(TARGETS 
        rknn_yolov11_detector_sample
        rknn_face_detector_sample
        rknn_face_detection_sample
        rknn_face_detection_file_sample
        rknn_rtsp_tracking_sample
        DESTINATION bin
        OPTIONAL
    )
    
    # Install RKNN MQTT samples if available
    if(CVEDIX_WITH_MQTT)
        install(TARGETS 
            rknn_face_tracking_sample
            DESTINATION bin
            OPTIONAL
        )
        
        if(CVEDIX_WITH_RTSP_SERVER)
            install(TARGETS 
                rknn_rtsp_tracking_mqtt_sample
                DESTINATION bin
                OPTIONAL
            )
        endif()
    endif()
endif()

# Install PaddlePaddle samples if available
if(CVEDIX_WITH_PADDLE)
    install(TARGETS 
        app_src_sample paddle_infer_sample
        DESTINATION bin
        OPTIONAL
    )
endif()

# Install CUDA samples if available
if(CVEDIX_WITH_CUDA)
    install(TARGETS 
        nv_hard_codec_sample
        DESTINATION bin
        OPTIONAL
    )
endif()

# Install TensorRT samples if available
if(CVEDIX_WITH_TRT)
    install(TARGETS 
        ba_jam_sample ba_stop_sample body_scan_and_plate_detect_sample
        dynamic_pipeline_sample dynamic_pipeline_sample2
        message_broker_sample2 multi_trt_infer_nodes_sample
        plate_recognize_sample src_des_sample trt_infer_sample
        vehicle_body_scan_sample vehicle_cluster_based_on_classify_encoding_sample
        vehicle_tracking_sample 1-N-1_sample 1-N-1_sample2 1-N-1_sample3
        trt_yolov8_sample trt_yolov8_sample2 rtmp_src_sample
        DESTINATION bin
        OPTIONAL
    )
endif()

message(STATUS "Sample build configuration completed.")
